--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -21,8 +21,8 @@
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Inferno</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Celitão e Kaduzão</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Study</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">media 7</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
@@ -43,8 +43,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Mé</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Estudar é isso</h4>
+                    <h3 class="aba-conteudo-titulo-principal">study</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">media 7</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias1"></p>
@@ -65,8 +65,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Varzea</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Faze o que</h4>
+                    <h3 class="aba-conteudo-titulo-principal">passar</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">media 6</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias2"></p>
@@ -87,8 +87,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Finalmente</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Não aguentava mais</h4>
+                    <h3 class="aba-conteudo-titulo-principal">completação</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">contrato</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias3"></p>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Meu Aniversário</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Só Pari</h4>
+                    <h4 class="aba-conteudo-titulo-secundario">05/08/xxxx</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias3"></p>
