--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,7 +10,7 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Tempo Até a Faculdade<span>_</span></h2>
+        <h2 class="titulo-principal">Tempo Até Completar o Ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">1° Trimestre</button>
