--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,19 +10,19 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Tempo Até Completar o Ano<span>_</span></h2>
+        <h2 class="titulo-principal">Tempo Até Completar o Ano</h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">1° Trimestre</button>
                 <button class="botao">2° Trimestre</button>
                 <button class="botao">3º Trimestre</button>
-                <button class="botao">Formação</button>
-                <button class="botao">Níver</button>
+                <button class="botao">Formatura</button>
+                <button class="botao">Aniversário</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Study</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">media 7</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Estudar</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Notas acima de 7,0</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
@@ -43,8 +43,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">study</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">media 7</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Estudar De Novo</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Media 7</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias1"></p>
@@ -65,8 +65,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">passar</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">media 6</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Terminar o 3°</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Media suficiente</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias2"></p>
@@ -87,8 +87,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">completação</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">contrato</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Recebimento de certificado</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Universitário</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias3"></p>
